@@ -1,4 +1,4 @@
-<!-- start of $Id: menu_mail.php,v 1.35 2006/02/26 09:32:53 goddess_skuld Exp $ -->
+<!-- start of $Id: menu_mail.php,v 1.36 2006/02/26 11:07:52 goddess_skuld Exp $ -->
 <?php
   if (!isset($conf->loaded))
     die('Hacking attempt');
@@ -25,7 +25,7 @@
         <a href="javascript:void(0);" onclick="window.open('down_mail.php?mail=<?php echo $content['msgnum'] ?>&amp;<?php echo session_name() . "=" . session_id(); ?>');"><?php echo htmlentities($html_down_mail, ENT_COMPAT, 'UTF-8') ?></a>
       </td>
       <td class="menu">
-        <a href="delete.php?delete_mode=1&amp;mail=<?php echo $content['msgnum'] ?>&amp;only_one=1" onclick="if (confirm('<?php echo $html_del_msg ?>')) return true; else return false;"><?php echo htmlentities($html_delete) ?></a>
+        <a href="delete.php?delete_mode=1&amp;mail=<?php echo $content['msgnum'] ?>&amp;only_one=1" onclick="if (confirm('<?php echo $html_del_msg ?>')) return true; else return false;"><?php echo htmlentities($html_delete, ENT_COMPAT, 'UTF-8') ?></a>
       </td>
       <?php if ($conf->enable_logout) { ?>
       <td class="menu">
@@ -35,4 +35,4 @@
     </tr>
   </table>
 </div>
-<!-- end of $Id: menu_mail.php,v 1.35 2006/02/26 09:32:53 goddess_skuld Exp $ -->
+<!-- end of $Id: menu_mail.php,v 1.36 2006/02/26 11:07:52 goddess_skuld Exp $ -->
