@@ -23,6 +23,8 @@ NOCC 1.3    ?? ??, 200?
     * Bug #1518887 : errors when enable preferences (Arnaud Boudou).
 
   Patches
+    * Patch #1574328 : Missing parameters for htmlentities() in menu_mail.php
+      (Tim Gerundt).
     * Patch #1572760 : Display structured text (Tim Gerundt).
     * Patch #1572077 : Put sort image after column title (Tim Gerundt).
     * Patch #1571741 : Colored quotes (Tim Gerundt and Arnaud Boudou).
